--- a/package.json
+++ b/package.json
@@ -14,10 +14,11 @@
     "@tailwindcss/vite": "^4.1.18",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "dotenv": "^17.2.3",
     "express": "^5.2.1",
     "framer-motion": "^12.27.1",
     "lucide-react": "^0.562.0",
-    "node-mailjet": "^3.3.4",
+    "node-mailjet": "^6.0.11",
     "radix-ui": "^1.4.3",
     "react": "^19.2.3",
     "react-dom": "^19.2.3",
